--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,6 +1,6 @@
 .web-body {
 	position: absolute;
-	margin-top: calc(3em + 75px);
+	margin-top: calc(3em + 50px);
 	width: 100%;
 	height: 100%;
 	z-index: -1;
